# taskboard-rs

./: .gitignore  LICENSE.md  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: app.yml  cargo_audit.yaml  core-lib.yml  infra.yml  project-service.yml  security-scan.yml  task-service.yml  taskboard-api.yml  taskboard-app.yml  taskboard-core-lib.yml  taskboard-infra.yml  todo-api.yml  todo-app.yml
api/: Cargo.toml  Dockerfile  README.md  TODO  k8s.yml
api/src/: cors.rs  main.rs  routes.rs
api/src/handlers/: health.rs  mod.rs  task_create.rs  task_get.rs  task_list.rs  task_update.rs
api/src/store/: es.rs  store.rs
app/: Cargo.toml  Dockerfile  README.md  TODO  k8s.yml  nginx-wasm-mime-type.conf  nginx.conf  nginx.conf.template
app/src/: app.rs  lib.rs
app/src/components/: create_project.rs  edit_task.rs  error_box.rs  health.rs  home.rs  mod.rs  project.rs  search_project.rs  taskbox.rs
app/static/: index.html  style.css
core/: Cargo.toml  README.md  TODO
core-lib/: Cargo.toml
core-lib/src/: commands.rs  lib.rs  project.rs  task.rs
core/src/: commands.rs  lib.rs  project.rs  task.rs
infra/: README.md  TODO
infra/azure/terraform/: data.tf  dns.tf  k8s.tf  main.tf
infra/azure/test/: dns.feature  k8s.feature
infra/k8s/: helm-prometheus-overrides.yml  ingress.yml  install-cert-manager.sh  install-elastic-cloud.sh  install-ingress-nginx.sh  install-prometheus-stack.sh  monitoring.yml
infra/k8s/terraform/: acme-issuer.yaml  api-ingress.yaml  app-ingress.yaml  cert_manager.tf  elastic-beats.yaml  elastic.tf  elasticsearch-cluster.yaml  elasticsearch.yaml  fluentd.tf  fluentd.yaml  grafana-ingress.yaml  ingress-service-monitor.yaml  ingress.tf  ingress.yaml  ingress.yml  install-elastic-cloud.sh  kibana-ingress.yaml  kibana.yaml  linkerd.tf  logs-ingress.yaml  main.tf  metrics-ingress.yaml  prometheus.tf  tls-cert.yaml
infra/terraform/: cert_manager.tf  data.tf  dns.tf  k8s.tf  main.tf
infra/test/: k8s.feature  mock.feature
project-service/: Cargo.toml  Dockerfile  k8s.yml
project-service/src/: cors.rs  errors.rs  main.rs  routes.rs
project-service/src/handlers/: create_project.rs  delete_project.rs  get_project.rs  health.rs  increment_counter.rs  mod.rs  search_project.rs
project-service/src/services/: task_service.rs
project-service/src/store/: es.rs  mod.rs  store.rs
task-service/: Cargo.toml  Dockerfile  README.md  k8s.yml
task-service/src/: errors.rs  main.rs  routes.rs
task-service/src/handlers/: health.rs  mod.rs  task_completed.rs  task_create.rs  task_delete.rs  task_list.rs  task_started.rs  task_update.rs
task-service/src/services/: project_service.rs
task-service/src/store/: es.rs  mod.rs  store.rs
