[package]
name = "taskboard-app"
version = "0.1.0"
authors = ["Christian Fosli <cfosli@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14"
wasm-bindgen = "0.2"
taskboard-core-lib = "0.1"
anyhow = "1"
log = "0.4"
wasm-logger = "0.2"
url = "2"
