[package]
name = "taskboard-app"
version = "0.1.0"
authors = ["Christian Fosli <cfosli@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.19"
yew-router = "0.16"
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["Document", "Window"]}
taskboard-core-lib = "0.1"
anyhow = "1"
log = "0.4"
wasm-logger = "0.2"
url = "2"
reqwest = "0.11"
