[package]
name = "taskboard-app"
version = "0.1.0"
authors = ["Christian Fosli <cfosli@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core lib
taskboard-core-lib = "0.1"
# wasm framework/tools
yew = "0.19"
yew-router = "0.16"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = {version = "0.3", features = ["Document", "Window", "History", "HtmlDialogElement"]}
gloo-dialogs = "0.1"
gloo-timers = "0.2"
gloo-utils = "0.1"
# general tools
anyhow = "1"
log = "0.4"
url = "2"
reqwest = {version = "0.11", features = ["json"]}
serde = "1"
serde_json = "1"
