[package]
name = "taskboard-core-lib"
version = "0.1.8"
authors = ["Christian Fosli <cfosli@gmail.com>"]
edition = "2018"
description = "Core library for taskboard web application"
homepage = "https://taskboard.cloud"
repository = "https://github.com/christianfosli/taskboard-rs"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
