[package]
name = "taskboard-core-lib"
version = "0.1.14"
authors = ["Christian Fosli <cfosli@gmail.com>"]
edition = "2018"
description = "Core library for taskboard web application"
homepage = "https://taskboard.cloud"
repository = "https://github.com/christianfosli/taskboard-rs"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
