[package]
name = "taskboard-core-lib"
version = "0.1.1"
authors = ["Christian Fosli <cfosli@gmail.com>"]
edition = "2018"
description = "Core library for taskboard web application"
homepage = "https://taskboard.cloud"
repository = "https://github.com/christianfosli/taskboard-rs"
license = "MIT"

[dependencies]
