[package]
name = "project-service"
version = "0.1.0"
authors = ["Christian Fosli <cfosli@gmail.com>"]
edition = "2018"

[dependencies]
taskboard-core-lib = "0.1.6"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
elasticsearch = "7.9.0-alpha.1"
pretty_env_logger = "0.3"
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
