[package]
name = "project-service"
version = "0.1.0"
authors = ["Christian Fosli <cfosli@gmail.com>"]
edition = "2018"

[dependencies]
taskboard-core-lib = "0.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
elasticsearch = "7.12.1-alpha.1"
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1"
async-trait = "0.1"
serde = "1"
serde_json = "1"
percent-encoding = "2"
